syntax = "proto3";

package BeeGees.Events;

message ShipmentDeliveredEvent {
    string ShipmentId = 1;

    int64 DeliveredDate = 2;
}